# dev-cpp-template

.devcontainer/: devcontainer.json
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
